--- a/exactamente:index.html
+++ b/exactamente:index.html
@@ -1,1 +1,25 @@
+<h1>Tu Técnico de Confianza en Monterrey</h1>
 
+<h2>Servicio técnico confiable para el hogar</h2>
+<p>Soluciones prácticas, claras y sin rodeos.</p>
+
+<ul>
+  <li>✔ Reparación de lavadoras</li>
+  <li>✔ Boilers y calentadores</li>
+  <li>✔ Electricidad residencial</li>
+  <li>✔ Plomería en general</li>
+</ul>
+
+<div class="info">
+  <p>📍 Servicio en Monterrey y área metropolitana</p>
+  <p><strong>Horario:</strong> Lunes a Sábado de 8:00 am a 7:00 pm</p>
+  <p>📲 Atención solo por WhatsApp</p>
+</div>
+
+<a class="btn" href="https://wa.me/528111777390" target="_blank">
+  Cotiza tu servicio por WhatsApp
+</a>
+
+<div class="footer">
+  <p>Respuesta directa • Sin intermediarios</p>
+</div>
